# cortex

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TODOS.md  learnings.md  loop.yaml  pyproject.toml
.claude/agents/: eval-auditor.md  signal-distiller.md
cortex/: __init__.py  cli.py  config.py  db.py  distill.py  embedder.py  eval.py  ingest.py  mcp_server.py  query.py  sanitize.py  sessions.py
cortex/providers/: __init__.py  base.py  claude.py  codex.py  goose.py
tests/: test_core_loop.py  test_eval.py  test_feedback.py  test_providers.py  test_sessions.py
